--- a/pages/order/detail/index.wxss
+++ b/pages/order/detail/index.wxss
@@ -88,7 +88,18 @@ page {
   font-size: 24rpx;
   color: #666;
 }
+.order-item-total.real .red{
+  color: #f00;
+}
 
+.order-item-total.real .amount{
+  display: inline-block;
+  margin-left: 20rpx;
+  font-size: 24rpx;
+  color: #666;
+  text-decoration: line-through;
+
+}
 .order-item-total label {
   font-size: 30rpx;
   color: #333;
@@ -105,6 +116,7 @@ page {
 }
 
 .order-item-info-real .data {
+  font-size: 24rpx;
   color:#666;
   text-decoration: line-through;
 }
