--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -284,6 +284,7 @@ color: transparent;
   padding: 50rpx 0;
   min-height: 300rpx;
   max-height: 600rpx;
+  transition: all .2s;
 }
 .scrollView{
   min-height: 300rpx;
