--- a/pages/user/settlement/index.wxml
+++ b/pages/user/settlement/index.wxml
@@ -4,7 +4,7 @@
   </view>
   <view class='settlement-main-search'>
     <image class='search-icon' src="../../../static/images/search.png"></image>
-    <input placeholder='单号' bindconfirm="searchIput" type='text' confirm-type="search" placeholder-class="holder"></input>
+    <input placeholder='单号' value="{{pageApi.id}}" bindconfirm="searchIput" bindinput='inputBlur' type='text' confirm-type="search" placeholder-class="holder"></input>
   </view>
 </view>
 <view class="settlement-main">
@@ -38,7 +38,7 @@
         <view class="item-imgs">
           <block wx:for="{{order.orderItems}}" wx:for-index="idx" wx:for-item="img" wx:key="*this">
             <view class='item-imgs-cell' wx:if="{{idx < 3}}">
-              <image class='productImg' src="{{img.productImg != '' ? img.productImg : '../../static/images/product-no-img.png'}}"></image>
+              <image class='productImg' src="{{img.productImg != '' ? img.productImg : '../../../static/images/product-no-img.png'}}"></image>
             </view>
           </block>
           <view class='item-imgs-cell arrow'></view>
