--- a/pages/order/index/index.wxss
+++ b/pages/order/index/index.wxss
@@ -84,7 +84,7 @@ page{
   padding: 10rpx 0 20rpx;
 }
 .ipt-view{
-  padding: 20rpx 15rpx;
+  padding: 20rpx 15px;
 }
 .ipt{
   border: 1px solid #e6e6e6;
@@ -94,7 +94,7 @@ page{
   text-align: left;
   border-radius: 3rpx;
   height: 130rpx;
-  width: 485rpx;
+  width: 230px;
 }
 .pipt{
   text-align: left;
