--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,76 +3,120 @@
   <view class='banner'>
     <image src="https://resource.anglele.com/saas/static/wx_banner.png"></image>
   </view>
+  <view class='search-main'>
+    <view class='search-main-wrap'>
+      <label class='search-icon'>
+        <image src="../../static/images/search.png"></image>
+      </label>
+      <input type='text' placeholder='请输入产品名称' value="{{searchVal}}" class='search-txt' bindinput='searchInpt' bindconfirm="bindconfirm" confirm-type="search" placeholder-style="holder-class"></input>
+      <label class='search-btn' bindtap='bindSearch'>搜索</label>
+      <label class='clear-search' wx:if="{{searchVal != ''}}" bindtap='clearSearch'>
+        <image src="../../static/images/clear-search.png"></image>
+      </label>
+    </view>
+  </view>
   <view class='goods-view-main'>
-    <view class='goods-view'>
+    <view class='goods-view' wx:if="{{!searchResult.length && searchVal === ''}}">
       <view class='goods-view-nav'>
-        <scroll-view class='view-nav' scroll-y style="height: {{clientHeight - bHeiht - cartHeight + 'px'}}">
+        <scroll-view class='view-nav' scroll-y style="height: {{clientHeight - bHeiht - searchHeight - cartHeight + 'px'}}">
           <view class='goods-nav-item' wx:for="{{list}}" wx:for-index="index" wx:key="{{item.id}}">
             <view class="goods-nav-name {{selectIndex === index ? 'selected':''}}" data-index="{{index}}" bindtap="switchNav">{{item.name}}</view>
           </view>
         </scroll-view>
       </view>
       <view class='goods-view-content'>
-        <scroll-view scroll-y style="height: {{clientHeight - bHeiht - cartHeight + 'px'}}" scroll-into-view="{{toView}}" bindscroll="goodsScroll" scroll-with-animation="{{true}}">
+        <scroll-view scroll-y style="height: {{clientHeight - bHeiht - searchHeight - cartHeight + 'px'}}" scroll-into-view="{{toView}}" bindscroll="goodsScroll" scroll-with-animation="{{true}}">
           <view scrollTop="{{scrollTop}}">
             <view class="i-sticky-wrap" wx:for="{{list}}" id="{{item.viewId}}" wx:for-index="index" wx:key="{{item.id}}">
-              <!-- <view slot="title"> -->
               <view class="title">
                 {{item.name}}
               </view>
-              <!-- <view slot="content"> -->
-                <view class='i-sticky-content' wx:for="{{item.products}}" wx:for-item="itemSub" wx:for-index="subIndex" wx:key="{{itemSub.id}}">
-                  <view class='products-info'>
-                    <view class='info-left'>
-                      <image src="{{itemSub.productImg !='' ? itemSub.productImg:'../../static/images/product-no-img.png'}}" mode="aspectFill" class='productImg' lazy-load="{{true}}"></image>
+              <view class='i-sticky-content' wx:for="{{item.products}}" wx:for-item="itemSub" wx:for-index="subIndex" wx:key="{{itemSub.id}}">
+                <view class='products-info'>
+                  <view class='info-left'>
+                    <image src="{{itemSub.productImg !='' ? itemSub.productImg:'../../static/images/product-no-img.png'}}" mode="aspectFill" class='productImg' lazy-load="{{true}}"></image>
+                  </view>
+                  <view class='info-right'>
+                    <view class='products-name'>{{itemSub.name}}</view>
+                    <view class="products-num">
+                      <i-input-number value="{{ itemSub.num }}" min="0" max="9999999999" data-item="{{itemSub}}" data-index="{{index}}" data-subIndex="{{subIndex}}" bindchange="handleChange" />
+                      <label wx:if="{{itemSub.totalPrice > 0}}">￥{{itemSub.totalPrice}}</label>
                     </view>
-                    <view class='info-right'>
-                      <view class='products-name'>{{itemSub.name}}</view>
-                      <view class="products-num">
-                        <i-input-number value="{{ itemSub.num }}" min="0" max="9999999999" data-item="{{itemSub}}" data-index="{{index}}" data-subIndex="{{subIndex}}" bindchange="handleChange" />
-                        <label wx:if="{{itemSub.totalPrice > 0}}">￥{{itemSub.totalPrice}}</label>
-                      </view>
-                      <view class="products-price">
-                        <label>{{itemSub.price}}元</label>/{{itemSub.unit}}
-                      </view>
+                    <view class="products-price">
+                      <label>{{itemSub.price}}元</label>/{{itemSub.unit}}
                     </view>
                   </view>
-                  <view class='products-desc'>{{itemSub.productDes}}</view>
                 </view>
-              <!-- </view> -->
+                <view class='products-desc'>{{itemSub.productDes}}</view>
+              </view>
             </view>
           </view>
         </scroll-view>
       </view>
     </view>
-    <view class='cart-main'>
-    <view class='cart-num' bindtap='showCoverCart'>
-      <label class='num'>{{totalNum}}</label>
-      <image class='cart-icon' src="../../static/images/cart-icon.png"></image>
+    <view class='goods-view'>
+      <view class='search-products' wx:if="{{searchResult.length && searchVal != ''}}">
+        <scroll-view scroll-y style="height: {{clientHeight - bHeiht - searchHeight + 'px'}}">
+          <view class='search-product-list'>
+            <view class="i-sticky-wrap">
+              <view class='i-sticky-content' wx:for="{{searchResult}}" wx:for-item="itemSub" wx:for-index="subIndex" wx:key="{{itemSub.id}}">
+                <view class='products-info'>
+                  <view class='info-left'>
+                    <image src="{{itemSub.productImg !='' ? itemSub.productImg:'../../static/images/product-no-img.png'}}" mode="aspectFill" class='productImg' lazy-load="{{true}}"></image>
+                  </view>
+                  <view class='info-right'>
+                    <view class='products-name'>{{itemSub.name}}</view>
+                    <view class="products-num">
+                      <i-input-number value="{{ itemSub.num }}" min="0" max="9999999999" data-froms="search" data-item="{{itemSub}}" data-index="{{index}}" data-subIndex="{{subIndex}}" bindchange="handleChange" />
+                      <label wx:if="{{itemSub.totalPrice > 0}}">￥{{itemSub.totalPrice}}</label>
+                    </view>
+                    <view class="products-price">
+                      <label>{{itemSub.price}}元</label>/{{itemSub.unit}}
+                    </view>
+                  </view>
+                </view>
+                <view class='products-desc'>{{itemSub.productDes}}</view>
+              </view>
+            </view>
+          </view>
+        </scroll-view>
+      </view>
+      <view wx:if="{{!searchResult.length && searchVal != ''}}" class="search-nodata">
+        <image src="../../static/images/search-no-data.png"></image>
+        <view class='title'>暂无数据！</view>
+        <view class='text'>还没有货品哦！再等等吧！</view>
+      </view>
     </view>
-    <view class='cart-all-price'>
-      <view class='cart-all-price-num'>￥{{allPrice}}</view>
-      <view class='cart-all-price-desc'>配送无忧，及时到达</view>
-    </view>
+    <view class='cart-main' wx:if="{{searchResult.length === 0 && searchVal === ''}}" >
+      <view class='cart-num' bindtap='showCoverCart'>
+        <label class='num'>{{totalNum}}</label>
+        <image class='cart-icon' src="../../static/images/cart-icon.png"></image>
+      </view>
+      <view class='cart-all-price'>
+        <view class='cart-all-price-num'>￥{{allPrice}}</view>
+        <view class='cart-all-price-desc'>配送无忧，及时到达</view>
+      </view>
       <view class="cart-confirm-btn {{canOrder ? '':'disable'}}" bindtap='confirmOrder'>提交订单</view>
     </view>
   </view>
 </view>
 <view class="selected-goods-cover {{showCover ? 'show':''}}">
-  <view class='selected-goods-header'><label bindtap='clearCart'><image src="../../static/images/clear-cart.png"></image>清空</label>已选商品</view>
+  <view class='selected-goods-header'>
+    <label bindtap='clearCart'>
+      <image src="../../static/images/clear-cart.png"></image>清空</label>已选商品</view>
   <view class='selected-goods-main'>
     <scroll-view scroll-with-animation="{{true}}" scroll-y="true" class='scrollView'>
-    <block wx:for="{{list}}" id="{{item.viewId}}" wx:for-index="index" wx:key="{{item.id}}">
-      <view wx:for="{{item.products}}" wx:for-item="itemSub" wx:for-index="subIndex" wx:key="{{itemSub.id}}">
-       <view class='cart-goods-item' wx:if="{{itemSub.num > 0}}">
-        <view class='cart-goods-item-cell'>{{itemSub.name}}</view>
-        <view class='cart-goods-item-cell price'>￥{{itemSub.price}}</view>
-        <view class='cart-goods-item-cell'>
-          <i-input-number value="{{ itemSub.num }}" min="0" max="9999999999" data-item="{{itemSub}}" data-index="{{index}}" data-subIndex="{{subIndex}}" bindchange="handleChange" />
+      <block wx:for="{{list}}" id="{{item.viewId}}" wx:for-index="index" wx:key="{{item.id}}">
+        <view wx:for="{{item.products}}" wx:for-item="itemSub" wx:for-index="subIndex" wx:key="{{itemSub.id}}">
+          <view class='cart-goods-item' wx:if="{{itemSub.num > 0}}">
+            <view class='cart-goods-item-cell'>{{itemSub.name}}</view>
+            <view class='cart-goods-item-cell price'>￥{{itemSub.price}}</view>
+            <view class='cart-goods-item-cell'>
+              <i-input-number value="{{ itemSub.num }}" min="0" max="9999999999" data-item="{{itemSub}}" data-index="{{index}}" data-subIndex="{{subIndex}}" bindchange="handleChange" />
+            </view>
+          </view>
         </view>
-       </view>
-      </view>
-    </block>
+      </block>
     </scroll-view>
   </view>
   <!-- <view class='selected-goods-footer'>已选商品</view> -->
